# rosplan_interface_quadrotor

./: CMakeLists.txt  README.md  package.xml
common/: domain.pddl  domainwp.pddl  plan.pddl  problem.pddl  rosplan_quad.pddl  rosplan_quad_p1.pddl
common/scripts/: init_demo.sh
launch/: quadrotor.launch  test_quadrotor_demo.launch  test_quadrotor_plan.launch
src/: rosplan_interface_quadrotor.cpp  test_quadrotor.cpp
